--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255,255,255,0);
 }
 
 .title{
@@ -68,7 +68,7 @@
   width:650px;
 }
 
-.secondGraph {
+/* .secondGraph {
   border-width:0px;
   border-radius: 10px;
   position:absolute;
@@ -78,10 +78,10 @@
   padding:10px;
   box-shadow:0px 5px 15px 0px rgba(0,0,0,0.3);
 
-  top :700px;
+  top :710px;
   left:370px;
   width:650px;
-}
+} */
 
 .thirdGraph {
   border-width:0px;
