--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255,255,255,0);
 }
 
 .title{
@@ -69,7 +69,7 @@
   top:50px;
   left:370px;
   width:750px;
-  height:400px;
+  /* height:400px; */
 }
 
 /* .secondGraph {
